2010-05-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        drop support for sessionStorage in sandbox iframes
        https://bugs.webkit.org/show_bug.cgi?id=38151

        Update client of sessionStorage to handle exceptions.

        * src/StorageAreaProxy.cpp:
        (WebCore::StorageAreaProxy::storageEvent):

2010-05-05  Darin Fisher  <darin@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] clear out deprecated methods that are no longer used
        https://bugs.webkit.org/show_bug.cgi?id=38610

        * public/WebFormElement.h:
        * public/WebInputElement.h:
        * public/WebKitClient.h:
        * public/WebView.h:
        * public/WebViewClient.h:
        (WebKit::WebViewClient::createPopupMenu):
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        * src/WebFormElement.cpp:
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::setSelectionRange):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::hideSuggestionsPopup):
        * src/WebViewImpl.h:

2010-05-05  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        [chromium] Add quota parameter to  WebStorageNamespace::createSessionStorageNamespace
        https://bugs.webkit.org/show_bug.cgi?id=38589

        * public/WebStorageNamespace.h:
        (WebKit::WebStorageNamespace::createSessionStorageNamespace):
        * src/WebStorageNamespaceImpl.cpp:
        (WebKit::WebStorageNamespace::createSessionStorageNamespace):

2010-05-05  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Darin Fisher.

        Update the plugin container's setFocus implementation to pass the new
        boolean argument to the next layer.

        https://bugs.webkit.org/show_bug.cgi?id=37961

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::setFocus):
        * src/WebPluginContainerImpl.h:
